--- a/myproject/templates/restaurants/manageStaff.html
+++ b/myproject/templates/restaurants/manageStaff.html
@@ -17,13 +17,25 @@
     <div class="row border mb-3">
         <h2 class="mt-3">Invite</h2>
         <div class="col-md-6">
-            <form action="{% url 'inviteStaff' pk %}" method="post">
+            <form action="{% url 'inviteStaff' pk %}" class="align-middle" method="post">
                 {% csrf_token %}
-                <input class="form-control m-3" id="myInput" type="text" name="resID" hidden value="{{pk}}">
-                <input class="form-control m-3" id="myInput" type="email" name="email" placeholder = "E-mail">
+                {% comment %} <input class="form-control m-3" id="myInput" type="text" name="resID" hidden
+                    value="{{pk}}"> {% endcomment %}
+                <input class="form-control d-inline m-3" style="width: 300px;" id="myInput" type="email" name="email"
+                    placeholder="E-mail">
+                {% if request.user.role == "executive" %}
+                <select class="form-select d-inline" style="width: 150px;" aria-label="restaurant Name" name="resID">
+                    {% for res in request.user.companyID.restaurant_set.all %}
+                    <option value="{{res.resID}}">{{res.resName}}</option>
+                    {% endfor %}
+                </select>
+                <input class="btn btn-primary ms-2 " type="submit" value="invite">
+                {% endif %}
         </div>
         <div class="col-md-6">
-            <input class="btn btn-primary mt-3 ms-2" type="submit" value="invite">
+            {% if request.user.role != "executive" %}
+            <input class="btn btn-primary ms-2 " type="submit" value="invite">
+            {% endif %}
         </div>
         </form>
     </div>
@@ -40,67 +52,67 @@
                 </tr>
             </thead>
             <tbody id="Table">
-            
-               
-                    
-                     {% for staff in staffs %}
-                     {% if  request.user.role == "manager" and staff.role == "staff" %}
-                    <tr>
-                        <th scope="row">{{staff.memberID}}</th>
-                        <td>
-                            <a href="{% url 'profile' staff.memberID %}">{{staff.fullName}} </a>
-                        </td>
-                        <td>{{staff.role}}</td>
-                        <td style="width: 300px;">
-                            <form action="{% url 'editRole' staff.resID %}" method="post" class="d-flex ">
-                                {% csrf_token %}
-                                <input type="text" name="memberID" value="{{staff.memberID}}" hidden>
-                                <input type="text" name="next" value="{{request.path}}" hidden>
-                                <select class="form-select d-inline me-2" style="width: 150px;" name=role>
-                                    <option selected hidden>{{staff.role}}</option>
-                                    <option value="manager">manager</option>
-                                    <option value="staff">staff</option>
-                                </select>
-                                <button class="btn btn-warning d-blcok" type="submit">Change</button>
-                            </form>
-                        </td>
-                        <td>
-                            <a class="btn btn-danger" data-bs-toggle="modal"
-                                data-bs-target="#removeStaff{{staff.memberID}}">Delete</a>
-                        </td>
-                    </tr>
 
-                    
-                    {% elif request.user.role == "executive" %}
-                    
-                    <tr>
-                        <th scope="row">{{staff.memberID}}</th>
-                        <td>
-                            <a href="{% url 'profile' staff.memberID %}">{{staff.fullName}} </a>
-                        </td>
-                        <td>{{staff.role}}</td>
-                        <td style="width: 300px;">
-                            <form action="{% url 'editRole' staff.resID %}" method="post" class="d-flex ">
-                                {% csrf_token %}
-                                <input type="text" name="memberID" value="{{staff.memberID}}" hidden>
-                                <input type="text" name="next" value="{{request.path}}" hidden>
-                                <select class="form-select d-inline me-2" style="width: 150px;" name=role>
-                                    <option selected hidden>{{staff.role}}</option>
-                                    <option value="manager">manager</option>
-                                    <option value="staff">staff</option>
-                                </select>
-                                <button class="btn btn-warning d-blcok" type="submit">Change</button>
-                            </form>
-                        </td>
-                        <td>
-                            <a class="btn btn-danger" data-bs-toggle="modal"
-                                data-bs-target="#removeStaff{{staff.memberID}}">Delete</a>
-                        </td>
-                    </tr>
-                    {% endif %}
-                    {% endfor %}
 
-                
+
+                {% for staff in staffs %}
+                {% if  request.user.role == "manager" and staff.role == "staff" %}
+                <tr>
+                    <th scope="row">{{staff.memberID}}</th>
+                    <td>
+                        <a href="{% url 'profile' staff.memberID %}">{{staff.fullName}} </a>
+                    </td>
+                    <td>{{staff.role}}</td>
+                    <td style="width: 300px;">
+                        <form action="{% url 'editRole' staff.resID %}" method="post" class="d-flex ">
+                            {% csrf_token %}
+                            <input type="text" name="memberID" value="{{staff.memberID}}" hidden>
+                            <input type="text" name="next" value="{{request.path}}" hidden>
+                            <select class="form-select d-inline me-2" style="width: 150px;" name=role>
+                                <option selected hidden>{{staff.role}}</option>
+                                <option value="manager">manager</option>
+                                <option value="staff">staff</option>
+                            </select>
+                            <button class="btn btn-warning d-blcok" type="submit">Change</button>
+                        </form>
+                    </td>
+                    <td>
+                        <a class="btn btn-danger" data-bs-toggle="modal"
+                            data-bs-target="#removeStaff{{staff.memberID}}">Delete</a>
+                    </td>
+                </tr>
+
+
+                {% elif request.user.role == "executive" %}
+
+                <tr>
+                    <th scope="row">{{staff.memberID}}</th>
+                    <td>
+                        <a href="{% url 'profile' staff.memberID %}">{{staff.fullName}} </a>
+                    </td>
+                    <td>{{staff.role}}</td>
+                    <td style="width: 300px;">
+                        <form action="{% url 'editRole' staff.resID %}" method="post" class="d-flex ">
+                            {% csrf_token %}
+                            <input type="text" name="memberID" value="{{staff.memberID}}" hidden>
+                            <input type="text" name="next" value="{{request.path}}" hidden>
+                            <select class="form-select d-inline me-2" style="width: 150px;" name=role>
+                                <option selected hidden>{{staff.role}}</option>
+                                <option value="manager">manager</option>
+                                <option value="staff">staff</option>
+                            </select>
+                            <button class="btn btn-warning d-blcok" type="submit">Change</button>
+                        </form>
+                    </td>
+                    <td>
+                        <a class="btn btn-danger" data-bs-toggle="modal"
+                            data-bs-target="#removeStaff{{staff.memberID}}">Delete</a>
+                    </td>
+                </tr>
+                {% endif %}
+                {% endfor %}
+
+
 
 
 
