--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -48,7 +48,9 @@
                     Queue
                 </a>
             </li>
-            <li>
+            
+            {% if request.user.resID == None %}
+                <li>
                 <a href="{%url 'staffHome' request.user.resID  %}" class="nav-link text-white" aria-current="page"
                     data-bs-toggle="modal" data-bs-target="#business" href="#home">
                     <svg class="bi me-2" width="16" height="16">
@@ -57,6 +59,9 @@
                     Start my own
                 </a>
             </li>
+            {% endif %}
+                
+            
             
             <li>
                 <a href="{%url 'menu' request.user.resID %}" class="nav-link text-white"> <!-- ลิงค์ไปที่ร้านตัวเอง -->
